# skyrimvr-backpack

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PCH.h  README.md  main.cpp  tasks.txt  todo.txt  vcpkg-configuration.json  vcpkg.json
include/: animations.h  art_addon.h  backpack.h  helper_game.h  helper_math.h  hooks.h  main_plugin.h  menu_checker.h  mod_event_sink.hpp  vrinput.h
include/VR/: OpenVRUtils.cpp  PapyrusVRAPI.h  VRHookAPI.h  VRManagerAPI.h  openvr.h
src/: VRInteractionSphere.cpp  VRInteractionSphere.h  animations.cpp  art_addon.cpp  backpack.cpp  helper_game.cpp  helper_game.h  helper_math.cpp  helper_math.h  hooks.cpp  main_plugin.cpp  menuChecker.cpp  menuChecker.h  menu_checker.cpp  mod_eventSink.hpp  mod_input.cpp  mod_input.h  plugin_backpack.cpp  plugin_backpack.h  vrinput.cpp
